; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/display/extr_intel_color.c_ctm_mult_by_limited.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/display/extr_intel_color.c_ctm_mult_by_limited.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CTM_COEFF_LIMITED_RANGE = common dso_local global i32 0, align 4
@CTM_COEFF_4_0 = common dso_local global i64 0, align 8
@CTM_COEFF_SIGN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*)* @ctm_mult_by_limited to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @ctm_mult_by_limited(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  store i32 0, i32* %5, align 4
  br label %9

9:                                                ; preds = %42, %2
  %10 = load i32, i32* %5, align 4
  %11 = icmp slt i32 %10, 9
  br i1 %11, label %12, label %45

12:                                               ; preds = %9
  %13 = load i32*, i32** %4, align 8
  %14 = load i32, i32* %5, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds i32, i32* %13, i64 %15
  %17 = load i32, i32* %16, align 4
  store i32 %17, i32* %6, align 4
  %18 = load i32, i32* @CTM_COEFF_LIMITED_RANGE, align 4
  store i32 %18, i32* %7, align 4
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @CTM_COEFF_ABS(i32 %19)
  %21 = load i64, i64* @CTM_COEFF_4_0, align 8
  %22 = sub nsw i64 %21, 1
  %23 = call i32 @clamp_val(i32 %20, i32 0, i64 %22)
  %24 = ashr i32 %23, 2
  store i32 %24, i32* %8, align 4
  %25 = load i32, i32* %7, align 4
  %26 = load i32, i32* %8, align 4
  %27 = call i32 @mul_u32_u32(i32 %25, i32 %26)
  %28 = ashr i32 %27, 30
  %29 = load i32*, i32** %3, align 8
  %30 = load i32, i32* %5, align 4
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds i32, i32* %29, i64 %31
  store i32 %28, i32* %32, align 4
  %33 = load i32, i32* %6, align 4
  %34 = load i32, i32* @CTM_COEFF_SIGN, align 4
  %35 = and i32 %33, %34
  %36 = load i32*, i32** %3, align 8
  %37 = load i32, i32* %5, align 4
  %38 = sext i32 %37 to i64
  %39 = getelementptr inbounds i32, i32* %36, i64 %38
  %40 = load i32, i32* %39, align 4
  %41 = or i32 %40, %35
  store i32 %41, i32* %39, align 4
  br label %42

42:                                               ; preds = %12
  %43 = load i32, i32* %5, align 4
  %44 = add nsw i32 %43, 1
  store i32 %44, i32* %5, align 4
  br label %9

45:                                               ; preds = %9
  %46 = load i32*, i32** %3, align 8
  ret i32* %46
}

declare dso_local i32 @clamp_val(i32, i32, i64) #1

declare dso_local i32 @CTM_COEFF_ABS(i32) #1

declare dso_local i32 @mul_u32_u32(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
